pghoard X.X.X (2016-XX-XX)
==========================

* Support for `local-tar` backups of a replica on PostgreSQL 9.6 and newer
  using the new non-exclusive backup mechanism.  Previous PostgreSQL
  versions require the pgespresso extension to take backups of replicas
  using the `local-tar` method, the pg_basebackup utilizing (default)
  methods have always supported backups of replicas.


pghoard 1.4.0 (2016-07-22)
==========================

* Add ability to get state file from webserver using GET /status
* Support for Telegraf and DataDog statsd
* Basebackup restoration now shows download progress
* New `basebackup_mode` option: `local-tar` to collect files directly from
  `$PGDATA` instead of running pg_basebackup.  The `local-tar` mode allows
  backing up user tablespaces
* New site-specific configuration option ``pg_data_directory`` is required
  to use the new ``local-tar`` mode, but it's also recommended in other
  configurations as the ``pg_xlog_directory`` option is now deprecated and
  will be removed in a future release
* New site-specific configuration option ``pg_bin_directory`` replaces the
  previous global ``pg_basebackup_path`` and ``pg_receivexlog_path``
  configuration options.  This allows handling multiple versions in a single
  pghoard configuration and simplifies configuration as a single option is
  needed instead of two.  Also, if a pg_data_directory exists the binary
  directory is automatically looked up from various well-known paths,
  removing the requirement of setting this option when using PGDG Debian,
  RHEL or Fedora packages.
* Basebackup handling was refactored to more cleanly handle the different
  operation modes: pipe data directly from pg_basebackup's stdout to PGHoard
  compression or collect the temporary tar files first that pg_basebackup
  writes itself.  This introduced a new configuration option per site:
  `basebackup_mode` which supersedes the old `stream_compression` config
  option