@@ -6,7 +6,7 @@ python:
   - "3.5"
 
 install:
-  - "pip install boto cryptography flake8 httplib2 mock psycopg2 pylint pytest python-dateutil python-snappy python-systemd requests"
+  - "pip install boto cryptography flake8 httplib2 mock psycopg2 pylint pytest python-dateutil python-snappy python-systemd requests azure azure-storage"
 
 script:
   - "make pylint"
